--- a/stage9/templates/stage9/base.html
+++ b/stage9/templates/stage9/base.html
@@ -24,6 +24,8 @@
         <link rel="stylesheet" type="text/css" href="{% static 'stage9/css/star-ratings.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'cooks/css/recipe_form.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'cooks/css/recipe_view.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'cooks/css/recipe_favs.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'cooks/css/recipe_author.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'stage9/css/home_view.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'stage9/css/base_view.css' %}" />
 
@@ -42,6 +44,8 @@
         <script type="text/javascript" src="{% static 'stage9/js/ajax_star_rating.js' %}"></script>
         <script type="text/javascript" src="{% static 'stage9/js/ajax_tags.js' %}"></script>
         <script type="text/javascript" src="{% static 'stage9/js/ajax_search.js' %}"></script>
+        <script type="text/javascript" src="{% static 'cooks/js/ajax_favs.js' %}"></script>
+        <script type="text/javascript" src="{% static 'cooks/js/ajax_author.js' %}"></script>
 
         <script>
             $( document ).ready(function() {
