--- a/stage9/templates/stage9/user.html
+++ b/stage9/templates/stage9/user.html
@@ -17,14 +17,14 @@
             <p>followers: {{ followers }}</p>
         </div>
         <p><a href="{% url 'profiles:account_update' %}">Update your profile NOW</a></p>
-        <a href="{% url 'profiles:my_recipes' %}">LOOK AT MY RECIPES</a>
+        <a href="{% url 'profiles:my_recipes' request.user %}">LOOK AT MY RECIPES</a>
     {% endif %}
     {% if request.user.username != profile_view.username and request.user.is_authenticated %}
         <div class="friendstuff" style="margin:10px;">
             {% include "stage9/follow_form.html" %}
             <a href="{% url 'messages:messages_compose_to' profile_view.username %}"><div class="msg_user">SEND MESSAGE</div></a>
         </div>
-        <a href="{% url 'my_recipes' profile_view %}">LOOK AT HIS RECIPES</a>
+        <a href="{% url 'my_recipes' profile_view %}">LOOK AT RECIPES BY {{ profile_view.username }}</a>
     {% endif %}
     <p>{{ profile_view.first_name }}</p>
     <p>{{ profile_view.last_name }}</p>
